force-app/main/default/objects/OpportunityLineItem/fields/Price_Variance__c.field-meta.xml
<CustomField>
    <fullName>Price_Variance__c</fullName>
    <formula>IF(
 OR(ListPrice=0,ISNULL(ListPrice)) ,  
1,
UnitPrice /  ListPrice
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% of List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>